Bug 587484 - warning: suggest parentheses around assignment used as truth value in while (... = GetNextContinuation()) r+a=dbaron